--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node app"
   },
   "dependencies": {
-    "express": "3.0.0beta5",
+    "express": "*",
     "ejs": "*",
     "async": "*",
     "request": "*"
