--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "start": "node app"
   },
   "dependencies": {
-    "express": "*",
-    "ejs": "*",
-    "async": "*",
-    "request": "*"
+    "express": "3.0.x",
+    "ejs": "0.7.x",
+    "async": "0.1.x",
+    "request": "2.9.x"
   },
   "engines":{
-    "node": "0.8.0",
-    "npm":  "1.1.32"
+    "node": "0.8.x",
+    "npm":  "1.1.x"
   }
 }
