--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "3.0.x",
     "ejs": "0.7.x",
     "async": "0.1.x",
-    "request": "2.9.x"
+    "request": "2.9.x",
+    "tmdb": "0.0.x"
   },
   "engines":{
     "node": "0.8.x",
