--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tookie",
-  "version": "0.2.3-2",
+  "version": "0.4.1",
   "private": true,
   "scripts": {
     "start": "node app.js"
@@ -10,8 +10,7 @@
     "ejs": "0.7.x",
     "async": "0.1.x",
     "request": "2.9.x",
-    "tmdb": "0.0.x",
-    "should": "*"
+    "nodeunit": "*"
   },
   "engines": {
     "node": "*",
