--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tookie",
-  "version": "0.4.1",
+  "version": "0.4.1-7",
   "private": true,
   "scripts": {
     "start": "node app.js"
