--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tookie",
-  "version": "0.5.2",
+  "version": "0.5.3-1",
   "private": true,
   "scripts": {
     "start": "node app.js"
