--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tookie",
-  "version": "0.5.5-3",
+  "version": "0.9.4.2",
   "private": true,
   "scripts": {
     "start": "node app.js"
@@ -10,6 +10,12 @@
     "ejs": "0.7.x",
     "async": "0.1.x",
     "request": "2.9.x",
+    "nodeunit": "*",
+    "mongoose": "*",
+    "mongodb": "*",
+    "passport": ">= 0.0.0",
+    "passport-facebook": ">= 0.0.0",
+    "ejs-locals": "~0.1.5",
     "nodeunit": "*"
   },
   "engines": {
