Properly handling user objects

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "async": "0.1.x",
     "request": "2.9.x",
     "mongoose": "*",
+    "nodemailer": "*",
     "mongodb": "*"
   },
   "env": {
